<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:style="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:visibility="visible">

    <TextView
        android:id="@+id/label_salary_title"
        style="@style/LabelDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_salary"
        style:layout_constraintEnd_toEndOf="parent"
        style:layout_constraintStart_toStartOf="parent"
        style:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/label_sum"
        style="@style/Label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space_double"
        android:layout_marginTop="@dimen/space_tripple"
        android:text="@string/label_sum"
        style:layout_constraintStart_toStartOf="parent"
        style:layout_constraintTop_toBottomOf="@+id/label_salary_title" />

    <EditText
        android:id="@+id/editTextSummary"
        style="@style/InputNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal"
        style:layout_constraintBottom_toBottomOf="@+id/label_sum"
        style:layout_constraintEnd_toEndOf="parent"
        style:layout_constraintTop_toTopOf="@+id/label_sum" />

    <TextView
        android:id="@+id/label_day"
        style="@style/Label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space_double"
        android:layout_marginTop="@dimen/space_tripple"
        android:text="@string/label_day"
        style:layout_constraintStart_toStartOf="parent"
        style:layout_constraintTop_toBottomOf="@+id/label_sum" />

    <Spinner
        android:id="@+id/spinner_day"
        style="@style/Spinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style:layout_constraintBottom_toBottomOf="@+id/label_day"
        style:layout_constraintEnd_toEndOf="parent"
        style:layout_constraintStart_toStartOf="@+id/editTextSummary"
        style:layout_constraintTop_toTopOf="@+id/label_day" />

    <Button
        android:id="@+id/button_positive"
        style="@style/ButtonDialogPositive"
        android:layout_width="wrap_content"
        android:text="@string/button_positive"
        style:layout_constraintStart_toStartOf="parent"
        style:layout_constraintTop_toTopOf="@+id/button_negative" />

    <Button
        android:id="@+id/button_negative"
        style="@style/ButtonDialogNegative"
        android:layout_width="wrap_content"
        android:text="@string/button_negative"
        style:layout_constraintBottom_toBottomOf="parent"
        style:layout_constraintEnd_toEndOf="parent"
        style:layout_constraintTop_toBottomOf="@+id/spinner_day" />

</androidx.constraintlayout.widget.ConstraintLayout>