<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/is_hourly_payment"
            style="@style/Switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/label_is_hourly_payment"
            style="@style/LabelList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_hourly_payment"
            app:layout_constraintBottom_toBottomOf="@+id/is_hourly_payment"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/enabled_comments"
            style="@style/Switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/is_hourly_payment" />

        <TextView
            android:id="@+id/label_enabled_comments"
            style="@style/LabelList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_enabled_comments"
            app:layout_constraintBottom_toBottomOf="@+id/enabled_comments"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/is_replay_payments"
            style="@style/Switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/enabled_comments" />

        <TextView
            android:id="@+id/label_is_replay_payments"
            style="@style/LabelList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_replay_payments"
            app:layout_constraintBottom_toBottomOf="@+id/is_replay_payments"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/payment_received"
            style="@style/Switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/is_replay_payments" />

        <TextView
            android:id="@+id/label_payment_received"
            style="@style/LabelList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_payments_received"
            app:layout_constraintBottom_toBottomOf="@+id/payment_received"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>